# Multi-scale-pointcloud-registration

./: .gitignore  README.md  README_.md  VERSION.txt  main.py  pyproject.toml  setup.py
Aligner/: Aligner.py
Optimizer/: FastGlobalOptimizer.py  GeneralizedICP.py  fastGlobalOptimizer.py  generalizedICP.py  iOptimizer.py
Preprocessor/: FarthesDownsampler.py  Preprocessor.py  RandomDownsampler.py  VoxelDownsampler.py  farthestDownsampler.py  iProcessBlock.py  preprocessor.py  randomDownsampler.py  voxelDownsampler.py
Visualizer/: Visualizer.py
alignment/: mcs_registration.py
scripts/: black.sh  clean_pycache.sh  run.sh
src/: test.py
src/Aligner/: Aligner.py
src/Optimizer/: fastGlobalOptimizer.py  generalizedICP.py  iOptimizer.py
src/Preprocessor/: farthestDownsampler.py  iProcessBlock.py  preprocessor.py  randomDownsampler.py  scaler.py  voxelDownsampler.py
src/Preprocessor/outliers/: sor.py
src/Visualizer/: Visualizer.py
src/alignment/: mcs_registration.py
src/data/: ArmadilloBack.conf  ArmadilloOnFace.conf  README
src/or_pcd/: test.py
src/or_pcd.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/or_pcd/Aligner/: Aligner.py  __init__.py
src/pointclouds/: test.py
src/pointclouds.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/test_library/: test.py
src/test_library.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/utils/: constants.py  logger_factory.py  util_mcs_registration.py
utils/: constants.py  create_cloud.py  logger_factory.py  util_mcs_registration.py
yml/: mcs_registration.yml
(+43 files in other folders)
