[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "test_library"
version = "0.0.1"
authors = [
  { name="Diego Polimeni", email="diego.polimeni@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"